--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,4 +7,5 @@ requires-python = ">=3.12"
 dependencies = [
     "django-stubs>=5.2.0",
     "djangorestframework>=3.16.0",
+    "djangorestframework-simplejwt>=5.5.0",
 ]
